--- a/GitDev/Podfile
+++ b/GitDev/Podfile
@@ -10,6 +10,6 @@ target 'GitDev' do
   pod 'SwiftLint'
   pod 'R.swift'
   pod 'SkeletonView'
-  pod 'ReachabilitySwift'
+  pod 'Connectivity'
 
 end
